# StudyIntell

./: app.py
AIStudyCompanion/: app.py  models.py  pyproject.toml  replit.md
AIStudyCompanion/instance/: study_buddy.db
AIStudyCompanion/middleware/: rate_limiter.py
AIStudyCompanion/routes/: api_routes.py  main_routes.py
AIStudyCompanion/services/: ai_service.py  rag_service.py  speech_service.py
AIStudyCompanion/static/css/: style.css
AIStudyCompanion/static/js/: audio_recorder.js  study_buddy.js
AIStudyCompanion/templates/: base.html  index.html  preferences.html
templates/: study_session.html
